lambdacube-dsl/tests/reject/framebuffer01.lc
main =
    let frame = FrameBuffer (ColorImage #1 #2)
    in ScreenOut frame
